--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.chat_part">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
    <application
-        android:label="chat_part"
+        android:label="Tracking park"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -32,6 +34,13 @@
             android:value="2" />
        <meta-data
            android:name="com.google.firebase.messaging.default_notification_channel_id"
+
            android:value="high_importance_channel" />
+       <meta-data
+           android:name="com.google.firebase.messaging.default_notification_icon"
+           android:resource="@drawable/ic_launcher" />
+       <meta-data
+           android:name="com.google.firebase.messaging.default_notification_color"
+           android:resource="@color/colorPrimary" />
     </application>
 </manifest>
