--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.6.0
-  cloud_firestore: ^4.7.0
+  cloud_firestore: ^4.7.1
   firebase_core: ^2.12.0
   firebase_storage: ^11.0.6
   google_sign_in: ^6.1.0
@@ -54,22 +54,15 @@ dependencies:
   string_validator: ^1.0.0
   flutter_local_notifications: ^14.1.0
   firebase_messaging: ^14.6.1
-
-
-
-  # google_sign_in: ^6.1.0
-  #fluttertoast: ^8.0.8
-  # image_picker: ^0.8.4+9
- # shared_preferences: ^2.0.13
-  #intl: ^0.17.0
-  #photo_view: ^0.13.0
-  #provider: ^6.0.2
- # country_code_picker: ^2.0.2
-  #url_launcher: ^6.: ^2.0.3
- # google_sign_in_web: ^0.10.0+5
+  http: ^0.13.6
+  flutter_launcher_icons: ^0.13.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "asset/icons/iconApp.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -90,8 +83,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  #assets:
-  #  - images/
+  assets:
+  - asset/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
