--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,8 +3,9 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
    <application
-        android:label="Tracking park"
+        android:label="Parcking booking"
         android:name="${applicationName}"
+
         android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
@@ -42,5 +43,6 @@
        <meta-data
            android:name="com.google.firebase.messaging.default_notification_color"
            android:resource="@color/colorPrimary" />
+
     </application>
 </manifest>
