--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   firebase_messaging: ^14.6.1
   http: ^0.13.6
   flutter_launcher_icons: ^0.13.1
+  mongo_dart: ^0.9.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
