--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,9 +57,20 @@ dependencies:
   http: ^0.13.6
   flutter_launcher_icons: ^0.13.1
   mongo_dart: ^0.9.1
+  slider_button: ^2.0.0
+  circular_countdown_timer: ^0.2.3
+  flutter_credit_card: ^3.0.6
+  introduction_screen: ^3.1.8
+  webview_flutter: ^4.2.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  google_maps_flutter: ^2.2.3
+  geolocator: ^9.0.2
+  geocoding: ^2.0.5
+  flutter_pdfview: ^1.2.1
+  flutter_polyline_points: ^1.0.0
 flutter_icons:
   android: "launcher_icon"
   ios: true
